correct z-indexes

--- a/site/styles/controlPanel.css
+++ b/site/styles/controlPanel.css
@@ -9,7 +9,7 @@
     left: 14px;
     width: 270px;
     height: 300px;
-    z-index: 3;
+    z-index: 7;
     border: 7px solid #ffff94;
     border-radius: 14px;
     background-color: #fff;
