--- a/site/styles/pages.css
+++ b/site/styles/pages.css
@@ -235,10 +235,9 @@
 }
 
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  /* padding-top: 100px; /* Location of the box */
+  display: none;
+  position: fixed;
+  z-index: 3;
   left: 0;
   top: 0;
   width: 100%;
